# humpback

./: README.md  pyproject.toml
analytics/: eda_first_aid_kit.md
classification/logistic_regression/: desafio.ipynb  exemplo1.ipynb  twitter_analysis.ipynb
linear_regression/challenge1/: challenge.ipynb  linear_regression_algorithm.ipynb
regression/challenges/: celsius_fahrenheit_tensorflow.ipynb
regression/deepLearning.AI_notebooks/: C1_W1_Lab02_Model_Representation_Soln.ipynb  C1_W1_Lab03_Cost_function_Soln.ipynb  C1_W1_Lab04_Gradient_Descent_Soln.ipynb  C1_W2_Lab03_Feature_Scaling_and_Learning_Rate_Soln.ipynb
regression/my_notebooks/: linear_regression_univariate.ipynb
utils/: C1_W2_Lab01_Python_Numpy_Vectorization_Soln.ipynb
