[tool.poetry]
name = "whale"
version = "0.0.1"
description = "A comprehensive project exploring various machine learning techniques through hands-on Jupyter notebooks"
authors = ["vinicius.frois <viniciusfroism@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
jupyter = "^1.1.1"
numpy = ">=1.23.5,<2.0.0"
pandas = "^2.2.3"
taskipy = "^1.13.0"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"


[tool.taskipy.tasks]
run = 'poetry run python -m ipykernel install --user --name=poetry_env'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
